# adac

./: .gitignore  .kateproject  CMakeLists.txt  README.md  ast.h  error.c  error.h  keywords.c  keywords.gperf  lexer.c  lexer.h  main.c  parser.c  parser.h  string_view.c  string_view.h  token.c  token.h
cmake/: FindGperf.cmake
docs/: notes.md
scripts/: gen_lexer_table.py  lexer.txt
src/: ast.h  debug.c  debug.h  error.c  error.h  gen_lexer_table.py  grammar83.tab.c  grammar83.y  keywords.c  keywords.gperf  lex.yy.c  lexer.c  lexer.h  lexer83.l  lexer_table.c  main.c  parser.c  parser.h  string_pool.c  string_pool.h  string_view.h  token.c  token.h
src/lexer_gen/: ast.h  checker.c  checker.h  debug.c  debug.h  generator.c  generator.h  lexer.c  lexer.h  main.c  parser.c  parser.h
src/util/: array.h  error.c  error.h  file_buffer.c  file_buffer.h  static_assert.h  string_view.c  string_view.h
tests/: array_test.c  int-type-test.adb  lexer-test.adb  main-proc-test.adb  run_tests.sh  string_pool_test.c
